# Engineering-Intelligence-Hub

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  WRITEUP.md  alembic.ini  conftest.py  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: __init__.py  main.py
backend/api/: admin.py  feedback.py  health.py  ingest.py  query.py
backend/cost/: __init__.py  meter.py
backend/llm/: __init__.py  answer.py  blocks.py  client.py  models.py  prompts.py  router.py
backend/rag/: __init__.py  chain.py  embeddings.py  fusion.py  hybrid.py  keyword.py  pipeline.py  rerank.py  routing.py  scoring.py  service.py  transform.py  vectorstore.py
backend/rag/graph/: __init__.py  build.py  edges.py  graders.py  nodes.py  state.py
backend/security/: __init__.py  acl.py  auth.py  principal.py  ratelimit.py
core/: __init__.py  constants.py  db.py  logging.py  schemas.py  settings.py  tracing.py
data/diagrams/: README.md
data/handbook/: architecture-overview.md  auth-service.md  db-credential-rotation.md  rate-limiting.md
data/incidents/: jira_export.json
data/repo/auth/: token_service.py
data/repo/gateway/: ratelimit.py
evals/: EXPERIMENTS.md  __init__.py  ab_experiment.py  grounding.py  retrieval_metrics.py  run.py  run_ragas.py  run_retrieval.py  tracing.py
evals/datasets/: golden.jsonl
frontend/: .env.example  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: Chat.tsx
frontend/lib/: useChatStream.ts
infra/: DEPLOY.md  backend.Dockerfile
infra/db/: 001_init.sql  002_schema.sql  003_ops.sql  004_embed_cache.sql  005_ingest_jobs.sql
ingestion/: __init__.py  chunking.py  contextualize.py  contextualize_async.py  contextualize_batch.py  embed.py  incremental.py  jobs.py  redact.py  run.py  schema.py
ingestion/loaders/: __init__.py  code.py  diagrams.py  docs.py  incidents.py  pdf.py
migrations/: env.py
migrations/versions/: 0001_baseline.py
tests/integration/: test_dim_contract.py  test_e2e_mock.py  test_health.py  test_sse.py
tests/unit/: test_acl.py  test_chunking.py  test_citations.py  test_cost.py  test_filter_compiler.py  test_graph_edges.py  test_grounding.py  test_hybrid_keying.py  test_image_blocks.py  test_incremental.py  test_logging.py  test_model_constants.py  test_pipeline_mapping.py  test_principal.py  test_redact.py  test_retrieval_metrics.py  test_router_tier.py  test_rrf.py  test_scoring.py
