[project]
name = "engineering-intelligence-hub"
version = "0.1.0"
description = "Developer-focused RAG over docs, code, diagrams, and incident reports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "faizvk", email = "faizvk14@gmail.com" }]

dependencies = [
  # --- LLM + embeddings ---
  "anthropic>=0.69,<1.0",            # Claude SDK (messages.create/.stream/.parse)
  "voyageai>=0.3.6,<1.0",            # embeddings + reranking (no Anthropic embeddings endpoint)

  # --- Orchestration (LCEL + LangGraph) ---
  "langchain>=0.3.27,<0.4",
  "langchain-core>=0.3.60,<0.4",
  "langchain-community>=0.3.27,<0.4",
  "langchain-anthropic>=0.3,<0.4",
  "langchain-voyageai>=0.1.6,<0.2",
  "langchain-postgres>=0.0.15,<0.1",
  "langchain-text-splitters>=0.3,<0.4",
  "langgraph>=0.2.60,<0.3",
  "langgraph-checkpoint-postgres>=2.0,<3.0",

  # --- Vector store / DB ---
  "psycopg[binary]>=3.2,<4.0",
  "pgvector>=0.3.6,<0.4",
  "sqlalchemy>=2.0.36,<3.0",
  "asyncpg>=0.30,<0.31",

  # --- API layer ---
  "fastapi>=0.115,<0.120",
  "uvicorn[standard]>=0.32,<0.40",
  "sse-starlette>=2.1,<3.0",
  "pyjwt[crypto]>=2.9,<3.0",         # JWT auth (RS256)
  "slowapi>=0.1.9,<0.2",             # per-user rate limiting

  # --- Config & schemas ---
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",

  # --- Document parsing for ingestion ---
  "pypdf>=5.1,<6.0",
  "tiktoken>=0.8,<1.0",

  # --- Observability ---
  # langchain 0.3.x pulls langsmith ~0.9, so cap at <1.0 (not <0.2, which fails to resolve).
  "langsmith>=0.1.140,<1.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8,<1.0",
  "mypy>=1.13,<2.0",
  "pytest>=8.3,<10.0",
  "pytest-asyncio>=0.24,<1.0",
  "httpx>=0.27,<1.0",
  "alembic>=1.14,<2.0",             # versioned DB migrations
]
eval = [
  "ragas>=0.2.6,<0.3",
  "datasets>=3.0,<4.0",
]

[project.urls]
Homepage = "https://github.com/faizvk/Engineering-Intelligence-Hub"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Monorepo: ship the shared kernel and the two services as packages.
packages = ["core", "backend", "ingestion", "evals"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Alembic migrations carry long SQL DDL string literals that don't wrap cleanly.
"migrations/**" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection pattern puts these calls in argument defaults
# on purpose — not a B008 bug.
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Header",
  "fastapi.Body",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
